--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-*.class
-
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -17,3 +10,4 @@ hs_err_pid*
 out
 
 database.properties
+target/
